css/style.css
@import url('https://fonts.googleapis.com/css2?family=Onest:wght@300..900&family=Unbounded:wght@250..900&display=swap');

html {
  scroll-behavior: smooth; /* включает плавный скролл */
}

* {
    box-sizing: border-box;
}

:root {
/* Переменные для шрифтов */
    --heading-font: "Unbounded", sans-serif;
    --subheading-font: "Onest", sans-serif;
    --lead-font: "Onest", sans-serif;
    --button-font: "Unbounded", sans-serif;
    --main-font: "Onest", sans-serif;
    --paragraph-font: "Onest", sans-serif;
    --pink--text-white-color-rgb: rgb(255, 254, 250);
/* grey ——— base ——— bg */
    --grey-bg-white:#FFFFFC;
    --grey-bg-light:#F7F7F5;
    --grey-bg-main:#F5F3F0;
    --grey-bg-dark:#E0DDDA;
    --grey-bg-black:#242322;
    --grey-bg-super-dark:#2E2C28;
/* grey ——— base ——— text */
    --grey-text-main:#28251E;
    --grey-text-white:#FCFBF7;
    --grey-text-light:#696662;
    --grey-text-super-light:#D6D3CB;
/* pink ——— base ——— text */
    --pink-text-black:#241921;
    --pink-text-super-dark: #332F32;
    --pink-text-dark: #82416C;
    --pink-text-light: #A38398;
    --pink-text-super-light:#CCBCC7;
    --pink-text-white:#FAF7F9;
/* pink ——— base ——— bg */
    --pink-bg-white:#FFFCFF;
    --pink-bg-light:#F5F0F3;
    --pink-bg-main:#CC6AA3;
    --pink-bg-dark:#82416C;
    --pink-bg-super-dark:#332E32;
    --pink-bg-black: #211D20;
/* pink ——— accent */
    --pink-accent-main: #FC65B6;
    --pink-accent-light: #FFF2F8;
    --pink-accent-dark: #E55CA1;
/* yellow */
    --yellow-text-white:#FFFEFA;
    --yellow-text-main:#292722;
    --yellow-text-light:#99948A;
    --yellow-text-accent:#FFBF00;
    --yellow-bg-black:#2E2C27;
    --yellow-bg-main:#FFD040;
/* violet */
    --violet-text-dark:#181929;
    --violet-bg-main:#8599FF;
    --violet-bg-light:#B2BFFF;
    --violet-bg-dark:#757EFF;
    --green-bg-dark: #00A3A3;
/* red */
    --red-text-white:#FFFBFA;
    --red-bg-main:#F23913;
    --red-bg-dark:#DE4A2C;
    --main:#FAFCFF;
    --hover:#ADCDFF;

/* Размеры шрифтов */
    --fz-64: 64px;
    --fz-58: 58px;
    --fz-56: 56px;
    --fz-48: 48px;
    --fz-40: 40px;
    --fz-32: 32px;
    --fz-30: 30px;
    --fz-28: 28px;
    --fz-24: 24px;
    --fz-22: 22px;
    --fz-20: 20px;
    --fz-18: 18px;
    --fz-17: 17px;
    --fz-16: 16px;
    --fz-14: 14px;
    --fz-13: 13px;
    --fz-12: 12px;
    --fz-10: 10px;
    --fz-8: 8px;
}

img {
    width: 100%;
    height: auto;
    object-fit: cover;
}

.logo {
    display: block;
    aspect-ratio: 1/1;
    margin: 0;
    object-fit: contain;
}

.divider-h {
    display: flex;
    flex: 0 0 1px;
    width: 100%;
    height: 1px;
    background: var(--grey-text-super-light);
    margin: 0;
}

.divider-v {
    flex: none;
    width: 0;
    height: 100%;
    border-right: 0.5px solid var(--grey-text-super-light);
    background: none;
    margin: 0;
}

.display {
    font-family: var(--display-font);
    font-size: var(--fz-88);
    text-align: center;
    font-weight: 700;
    line-height: 100%; /* 88px */
    letter-spacing: -0.5px;
    color: var(--yellow-text-main, #292722);
}

h1, 
h2, 
h3, 
h4, 
h5,
h6 {
    font-family: var(--heading-font);
    font-weight: 500;
    line-height: 120%;
    letter-spacing: -1px;
    color: var(--grey-text-main);
    text-align: left;
    margin: 0;
}

h1 {
    font-size: var(--fz-64);
    font-weight: 500;
    line-height: 112%; /* 71px */
}

h2 {
    font-size: var(--fz-48);
    font-weight: 450;
    line-height: 108%; /* 52px */
    letter-spacing: -0.8px;
}

h3 {
    font-size: var(--fz-32);
    font-weight: 450;
    line-height: 125%; /* 40px */
    letter-spacing: -0.5px;
}

h4 {
    font-size: var(--fz-24);
    line-height: 115%; /* 27,6px */
    letter-spacing: 0;
}

h5 {
    font-size: var(--fz-22);
    line-height: 110%; /* 24,2px */
    letter-spacing: -0.5px;
}

h6 {
    font-size: var(--fz-13);
    font-weight: 450;
    line-height: 112%; /* 24,2px */
    letter-spacing: 0px;
}

a {
    color: var(--grey-text-main);
}

.subheading-1,
.subheading-2,
.subheading-3,
.subheading-4,
.subheading-5,
.subheading-6 {
    font-family: var(--main-font);
    font-weight: 400;
    line-height: 110%;
    letter-spacing: -1px;
    color: var(--grey-text-main);
    text-align: left;
    margin: 0;
}

.subheading-1 {
    font-size: var(--fz-48);
    line-height: 100%; /* 76px */
    letter-spacing: -2px;
}

.subheading-2 {
    font-size: var(--fz-40);
    line-height: 110%; /* 44px */
    letter-spacing: -0.5px;
}

.subheading-3 {
    font-size: var(--fz-32);
    line-height: 100%; /* 46px */
    letter-spacing: -0.5px;
}

.subheading-4 {
    font-size: var(--fz-24);
    font-weight: 350;
    line-height: 135%; /* 24px */
    letter-spacing: -0.5px;
}

.subheading-5 {
    font-size: var(--fz-24);
    font-weight: 400;
    line-height: 102%; /* 24,48px */
    letter-spacing: -0.5px;
}

.subheading-6 {
    font-size: var(--fz-18);
    font-weight: 400;
    line-height: 102%; /* 18.36px */
    letter-spacing: -0.25px;
}

.lead-1,
.lead-2,
.lead-3 {
    font-family: var(--main-font);
    font-weight: 400;
    line-height: 135%;
    letter-spacing: -0.5px;
    color: var(--grey-text-main);
    text-align: left;
    margin: 0;
}

.lead-1 {
    font-size: var(--fz-32);
    font-weight: 250;
    line-height: 140%; /* 44px */
    letter-spacing: -0.4px;
}

.lead-2 {
    font-size: var(--fz-24);
    font-weight: 300;
    letter-spacing: -0.25px;
}

.lead-3 {
    font-size: var(--fz-18);
    font-weight: 300;
    line-height: 132%; /* 23,76px */
    letter-spacing: -0.3px;
}

.lead-1 + .lead-1 {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 40px;
}

.paragraph,
.link {
    font-family: var(--main-font);
    color: var(--grey-text-main);
    font-size: var(--fz-17);
    font-weight: 300;
    line-height: 135%;
    letter-spacing: -0.2px;
    text-align: left;
    margin: 0;
}
/* ... */

